--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm --workspace packages/react-frontend run dev",
+    "start": "npm run dev"
   },
   "author": "",
   "license": "ISC",
