--- a/packages/express-backend/package.json
+++ b/packages/express-backend/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "express-backend",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "backend.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon backend.js",
+    "start": "node backend.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^4.18.2"
   }
 }
