--- a/packages/express-backend/package.json
+++ b/packages/express-backend/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "mongoose": "^8.19.1"
   }
 }
